[gd_scene load_steps=18 format=3 uid="uid://cu6sly8lgojf0"]

[ext_resource type="Script" uid="uid://df3itmbapriaw" path="res://necromancer_enemy.gd" id="1_bnsxp"]
[ext_resource type="Texture2D" uid="uid://dmf3j6a87dlwh" path="res://resources/necromancer.png" id="2_wgkl2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqufi"]
size = Vector2(12, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvtmc"]
atlas = ExtResource("2_wgkl2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rwaw"]
atlas = ExtResource("2_wgkl2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew55c"]
atlas = ExtResource("2_wgkl2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g626g"]
atlas = ExtResource("2_wgkl2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsyt0"]
atlas = ExtResource("2_wgkl2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3go7"]
atlas = ExtResource("2_wgkl2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ee4d1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvtmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rwaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew55c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g626g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsyt0")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3go7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksrqk"]
size = Vector2(26, 30)

[sub_resource type="Gradient" id="Gradient_mvtmc"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4rwaw"]
gradient = SubResource("Gradient_mvtmc")
width = 16

[sub_resource type="Animation" id="Animation_mvtmc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hqufi"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.75, 1),
"update": 0,
"values": [Color(1, 0.231373, 0.231373, 0.639216), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4rwaw"]
_data = {
&"RESET": SubResource("Animation_mvtmc"),
&"hit": SubResource("Animation_hqufi")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mvtmc"]
radius = 108.227

[node name="NecromancerEnemy" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_bnsxp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 14)
shape = SubResource("RectangleShape2D_hqufi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ee4d1")
animation = &"attack"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ksrqk")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -19.0
max_value = 10.0
step = 0.1
value = 10.0
texture_under = SubResource("GradientTexture1D_4rwaw")
texture_progress = SubResource("GradientTexture1D_4rwaw")
tint_under = Color(0.4, 0.4, 0.4, 1)
tint_progress = Color(0.5, 0.16, 0.16, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4rwaw")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
visible = false
shape = SubResource("CircleShape2D_mvtmc")

[node name="SummonTime" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="SummonTime" to="." method="_on_summon_time_timeout"]
